[gd_scene load_steps=9 format=2]

[ext_resource path="res://Character/Player/MouseLook.gd" type="Script" id=1]
[ext_resource path="res://Character/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://Guns/CLAW/Claw.tscn" type="PackedScene" id=3]
[ext_resource path="res://Character/Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Guns/Orbital_L/Orbital_L.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.8
height = 0.6

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.20765, 0.857924, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[node name="Player" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="." index="1"]
current = true
script = ExtResource( 1 )

[node name="Orbital_L" parent="Camera" index="0" instance=ExtResource( 5 )]

[node name="Claw" parent="Camera" index="1" instance=ExtResource( 3 )]

[node name="HitBox" type="Area" parent="." index="3"]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="HitBox" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="4"]
layer = 2

[node name="HurtTexture" type="TextureRect" parent="CanvasLayer" index="0"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 3 )
expand = true

[connection signal="rotation_requested" from="Camera" to="." method="_on_Camera_rotation_requested"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
